# assertcc

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
docker/debian-clang20/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in
include/assertcc/: adl.h  assertcc.h
include/assertcc/proposition/: booleanpropositions.h  boolpropositions.h  comparingpropositions.h  containskeypropositions.h  containsmapentrypropositions.h  containspropositions.h  expiredpropositions.h  hasbackthatpropositions.h  hasfrontthatpropositions.h  haslengthpropositions.h  hassizepropositions.h  hasvaluethatpropositions.h  isemptypropositions.h  isequaltopropositions.h  isfunctionequaltopropositions.h  isinpropositions.h  isnullpropositions.h  ispresentpropositions.h  iswrapperemptypropositions.h  iswrapperpresentpropositions.h  iteratorpropositions.h  mappropositions.h  optionalpropositions.h  stdfloatingpropositions.h  stringpropositions.h  valuecontainerpropositions.h  weakptrpropositions.h
include/assertcc/subject/: base.h  boolsubject.h  complexsubject.h  flatmultimapsubject.h  floatingsubject.h  functionsubject.h  genericsubject.h  integralsubject.h  iteratorssubject.h  mapsubject.h  mdspansubject.h  multimapsubject.h  multisetsubject.h  optionalsubject.h  pairsubject.h  pointersubject.h  priorityqueuesubject.h  queuesubject.h  setsubject.h  sharedptrsubject.h  spansubject.h  stacksubject.h  stringsubject.h  stringviewsubject.h  uniqueptrsubject.h  weakptrsubject.h
include/assertcc/util/: checkutil.h  failmessage.h  prettyprint.h
tests/: CMakeLists.txt  bool.t.cc  complex.t.cc  double.t.cc  flat_map.t.cc  flat_multimap.t.cc  flat_set.t.cc  float.t.cc  function.t.cc  int.t.cc  iterators.t.cc  map.t.cc  mdspan.t.cc  multimap.t.cc  multiset.t.cc  optional.t.cc  pair.t.cc  pointers.t.cc  priority_queue.t.cc  queue.t.cc  set.t.cc  shared_ptr.t.cc  span.t.cc  stack.t.cc  string.t.cc  string_view.t.cc  unique_ptr.t.cc  unordered_map.t.cc  unordered_multimap.t.cc  unordered_set.t.cc  user_class.t.cc  user_subject.t.cc  weak_ptr.t.cc
